--- a/views/protected.hbs
+++ b/views/protected.hbs
@@ -1,1 +1,4 @@
 <h1>PORTECTED PAGE</h1>
+<div style="margin-top: 30px">
+  <a class="btn btn-primary btn-lg active" href="/logout">Log Out</a>
+</div>
